// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-detail page 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--if-->
    <li></li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--WithoutFlushLoader-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018
  (v 0.0.4) </footer>
<!--Footer-->"
`;

exports[`project-detail page 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--if-->
    <li>Test</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-info\\">
    <h3>Test</h3>
    <dl>
      <dt>/tmp/</dt>
      <dd>Current work directory.</dd>
      <dd>This directory will be used when running tasks.</dd>
      <dt>
        <a href=\\"projects/1/edit\\"> Edit </a>
      </dt>
      <dd>Edit project name &amp; cwd</dd>
      <dt>
        <a class=\\"project-delete-link\\" href=\\"projects/1/delete\\"> Delete </a>
      </dt>
      <dd>Delete project</dd>
    </dl>
  </div>
  <div class=\\"project-chains\\">
    <h3>Chains</h3>
    <button class=\\"project-chain\\">First chain</button>
    <!--if-->
    <!--Chain-->
    <button class=\\"project-chain\\">Second chain</button>
    <!--if-->
    <!--Chain-->
    <!--for-->
    <a class=\\"project-chain project-chain-create\\" href=\\"projects/1/chains/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--Info-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018
  (v 0.0.4) </footer>
<!--Footer-->"
`;
